Let personal information ignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ local.properties
 
 project.properties
 custom_properties.xml
+face.psd
+face_dwkang.jpg
 face_cssong_r.png
 face_cssong.png
 face_dwkang_r.png
